@@ -1,3 +1,9 @@
+19/07/2011 Changes
+
+Added ClassBytecodeWriter - used to be a single generator but cleaner if I separate.
+Class being written and executed without problem.
+
+
 17/07/2011 Changes
 
 Added a preprocessor to process the method definitions starting with "+" and "-".
